analysis/low-level-api-fir/testData/getOrBuildFir/invalidCode/destructuringNonLocalBeforeInitBlock.kt
class C {
    val (e) =

    init <expr>{
    }</expr>
}